@startuml
Community--> CustomProximityFinder
CustomProximityFinder -->"*" ProximityFinder

class CustomProximityFinder{
    -List<ProximityFinder> proximityFinders

    +aplicateProximityFinders(Member,incident)
}



' SE CONVIRTIO DE INTERFACE A CLASE ABSTRACTA
abstract class ProximityFinder {

  + Boolean memberIsCloser(Members member,Incident incidente>)
}



class ProvinceSearcher extends ProximityFinder{

}

class MunicipalitySearcher extends ProximityFinder{

}

class DepartmentSearcher extends ProximityFinder{

}

class LocalitySearcher extends ProximityFinder{

}

@enduml


NOTAS:

para sacar la logica repetida, aplicamos lo mismo que en los validadores
de contraseñas

ahora una comunidad conoce a su CUSTOM PROXIMITY FINDER
entonces lo configura con filtros de busqueda dependiendo como la comunidad quiera avisar a sus miembros

se aplican los criterios de busqueda de la misma manera que en las validaciones de contra.


